Fixed issue of images clipping with nav

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -60,6 +60,7 @@ nav {
     position: absolute;
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 
 nav ul {
